assets/css/style.css
body {
  background-image: url(../images/ep_naturalblack.png);
  background-attachment: fixed;
  font-family: 'Lora', serif;
}

.fixed-action-btn {
  bottom: 55px;
  right: 25px;
}

.page-wrapper {
  width: 95%;
  max-width: 1700px;
  margin: 0 auto;
}

#left-column,
#right-column {
  min-height: 100vh;
}

h1 {
  font-size: 16.5vw;
  letter-spacing: 0.2rem;
  margin: 0;
  display: inline;
}

h2 {
  font-size: 6vw;
  line-height: 1.5;
}

p {
  font-size: 4vw;
  line-height: 1.7;
}

.row {
  margin-bottom: 0;
}

.name {
  position: fixed;
  font-family: 'Patua One', cursive;
}

.about {
  position: relative;
  top: 100vh;
  text-align: justify;
  padding-bottom: 20vh;
  background-image: url(../images/ep_naturalblack.png);
  background-attachment: fixed;
}

.icons {
  margin-top: 3%;
}

i {
  color: white;
  font-size: 2vw;
  margin-right: 5%;
}

img {
  border-radius: 50%;
  width: 60vw;
  display: block;
  margin: 0 auto;
}

#lang-icons li {
  display: inline;
}

#lang-icons li i {
  font-size: 10vw;
}

.page-footer {
  position: relative;
  top: 100vh;
}

@media only screen and (min-width: 601px) and (max-width: 992px) {
  .page-wrapper {
    width: 90%;
    margin: 0 auto;
  }

  h1 {
    font-size: 7.8vw;
  }

  img {
    width: 30vw;
  }

  h2 {
    font-size: 3.5vw;
  }

  p {
    font-size: 2.2vw;
  }

  #lang-icons li i {
    font-size: 5vw;
  }
}

@media only screen and (min-width: 993px) {
  .fixed-action-btn {
    bottom: 100px;
    right: 50px;
  }
  
  .page-wrapper {
    width: 85%;
    margin: 0 auto;
  }

  h1 {
    font-size: 7.8vw;
  }

  img {
    width: 20vw;
  }

  h2 {
    font-size: 2.5vw;
  }

  p {
    font-size: 1.25vw;
  }

  #lang-icons li i {
    font-size: 5vw;
  }
}

